--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <title> Divine McDuffie</title>
     </head>
 
-    <body style = "background-color:#60066e; font-family: Arial, Helvetica, sans-serif ;">
-    <table border="2" style="width:50%; color: #60066e; background-color: #e0c0ff; margin:auto;">
-    
+    <body style = "background-color:#066e2e; font-family: Arial, Helvetica, sans-serif ;">
+       
+    <table border="2" style="width:50%; color: #52066e; background-color: #e0c0ff; margin:auto;">
+        <p style="background-image: url('wp-index.png');"> 
         <tr><td colspan = "4"<ul>
 <h1> Divine McDuffie </h1>
 
